Implementirano logovanje na agentskoj aplikaciji

--- a/AgentAppFront/src/app/components/userComponent/administrator/administrator.component.html
+++ b/AgentAppFront/src/app/components/userComponent/administrator/administrator.component.html
@@ -1,1 +1,10 @@
-<p>administrator works!</p>
+<mat-toolbar color="primary" class="app-header">
+    <div><a href="/" class="navlogo">Rent-A-Car Administrator</a></div>
+    <span class="nav-tool-items">
+      <a mat-button mat-raised-button routerLink="" routerLinkActive="active" (click)="onOdjaviMe()">Odjavi Me</a>
+    </span>
+  </mat-toolbar>  
+
+<div style="padding:20px;margin-top:30px;">
+    <router-outlet></router-outlet>
+</div>
