--- a/AgentAppFront/src/app/components/login/login.component.html
+++ b/AgentAppFront/src/app/components/login/login.component.html
@@ -1,12 +1,11 @@
 <mat-toolbar color="primary" class="app-header">
-    <div><a href="/" class="navlogo">Klinicki Centar</a></div>
+    <div><a href="/" class="navlogo">Rent-A-Car</a></div>
     <span class="nav-tool-items">
-      <a mat-button routerLink="/login" routerLinkActive="active">Prijavi se</a>
       <a mat-button mat-raised-button routerLink="/register" routerLinkActive="active">Napravi nalog</a>
     </span>
   </mat-toolbar>
   
-  <div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center" style="margin-top: -30px;">
+  <div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center" > <!-- style="margin-top: -30px;" -->
     <mat-card class="box">
       <mat-card-header>
         <mat-card-title>Prijavi se</mat-card-title>
