--- a/AgentAppFront/src/app/components/userComponent/user/user.component.html
+++ b/AgentAppFront/src/app/components/userComponent/user/user.component.html
@@ -3,8 +3,43 @@
     <span class="nav-tool-items">
       <a mat-button mat-raised-button routerLink="" routerLinkActive="active" (click)="onOdjaviMe()">Odjavi Me</a>
     </span>
-  </mat-toolbar>  
+</mat-toolbar>  
+
+<!-- OGLASI -->
 
 <div style="padding:20px;margin-top:30px;">
+    
+  <p style="font-size: 18px;">Oglasi:</p>
+    <table mat-table [dataSource]="oglasiSource" matSort class="mat-elevation-z8">
+
+      <ng-container matColumnDef="Vlasnik">
+        <th mat-header-cell *matHeaderCellDef> Vlasnik</th>
+        <td mat-cell *matCellDef="let element">{{element.vozilo.user.firstname}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="Mesto">
+        <th mat-header-cell *matHeaderCellDef> Mesto </th>
+        <td mat-cell *matCellDef="let element">{{element.mesto}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="Klasa">
+        <th mat-header-cell *matHeaderCellDef> Klasa </th>
+        <td mat-cell *matCellDef="let element">{{element.vozilo.klasaVozila.naziv}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="Model">
+        <th mat-header-cell *matHeaderCellDef> Model </th>
+        <td mat-cell *matCellDef="let element">{{element.vozilo.modelVozila.naziv}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="zakazi">
+        <th mat-header-cell *matHeaderCellDef> Rezervisi </th>
+        <td mat-cell *matCellDef="let element"> <button mat-button (click)="onRezervisi(element)">Rezervisi</button> </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+
     <router-outlet></router-outlet>
 </div>
