Rad na terminima zauzeca

--- a/ServisiFront/src/app/components/userComponent/user/pravi-oglas/pravi-oglas.component.html
+++ b/ServisiFront/src/app/components/userComponent/user/pravi-oglas/pravi-oglas.component.html
@@ -44,7 +44,11 @@
          <!-- <mat-form-field>
           <mat-checkbox>Collision Damage Waiver</mat-checkbox>
         </mat-form-field>-->
-        </mat-card-content>
+          <div form-group>
+            <input type="checkbox" [(ngModel)]="cdw"  [ngModelOptions]="{standalone: true}" data-md-icheck (change)="toggleVisibility($event)"/>
+            CDW
+          </div>  
+      </mat-card-content>
   
         <button mat-stroked-button color="primary" class="btn-block" type="submit">Potvrdi</button>
   
