--- a/ServisiFront/src/app/components/userComponent/user/my-shop-cart-items/my-shop-cart-items.component.html
+++ b/ServisiFront/src/app/components/userComponent/user/my-shop-cart-items/my-shop-cart-items.component.html
@@ -1,3 +1,10 @@
+<mat-toolbar color="primary" class="app-header">
+    <div><a href="/user" class="navlogo">Rent-A-Car Korisnik</a></div>
+    <span class="nav-tool-items">
+      <a mat-button mat-raised-button routerLink="" routerLinkActive="active" (click)="onOdjaviMe()">Odjavi Me</a>
+    </span>
+</mat-toolbar>
+
 <mat-card class="papper" style="width: 600px; height: 800;">
 
     <mat-card-header>
