--- a/ServisiFront/src/app/components/userComponent/user/vozilo-details/vozilo-details.component.html
+++ b/ServisiFront/src/app/components/userComponent/user/vozilo-details/vozilo-details.component.html
@@ -1,6 +1,7 @@
 <mat-toolbar color="primary" class="app-header">
     <div><a href="/user" class="navlogo">Rent-A-Car Korisnik</a></div>
     <span class="nav-tool-items">
+        <a mat-button mat-raised-button routerLink="" routerLinkActive="active" (click)="onShoppingCart()">Moja Korpa</a>
       <a mat-button mat-raised-button routerLink="" routerLinkActive="active" (click)="onOdjaviMe()">Odjavi Me</a>
     </span>
 </mat-toolbar>  
