--- a/ServisiFront/src/app/components/userComponent/agent/termin-zauzeca-dialog/termin-zauzeca-dialog.component.html
+++ b/ServisiFront/src/app/components/userComponent/agent/termin-zauzeca-dialog/termin-zauzeca-dialog.component.html
@@ -1,1 +1,46 @@
-<p>termin-zauzeca-dialog works!</p>
+<div class="dialog" fxLayout="row" fxLayoutAlign="center center">
+    <mat-card class="box">
+        <mat-card-header>
+            <mat-card-title>Rezervisi</mat-card-title>
+        </mat-card-header>
+        <form class="form" #formControl="ngForm">
+            <mat-card-content>
+
+                <!-- Datum Preuzimanja -->
+                <mat-form-field class="full-width">
+                    <input [(ngModel)]="datumPreuzimanja" matInput [matDatepicker]="picker1" placeholder="Pocetak Zauzeca"
+                        [ngModelOptions]="{standalone: true}" required disabled>
+                    <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+                    <mat-datepicker #picker1 disabled="false"></mat-datepicker>
+                </mat-form-field>
+
+                <!-- Vreme Preuzimanja -->
+                <p style="color: rgb(153, 152, 152);">Vreme Pocetka Zauzeca:</p>
+                <div class="ngx-timepicker-field-example">
+                    <ngx-timepicker-field [(ngModel)]="timeFrom" [ngModelOptions]="{standalone: true}"
+                        [defaultTime]="'12:00'" [format]="24" [controlOnly]="true"></ngx-timepicker-field>
+                </div>
+
+                <!-- ******************************************************************************************************* -->
+
+                <!-- Datum Povratka -->
+                <mat-form-field class="full-width">
+                    <input [(ngModel)]="datumPovratka" matInput  [matDatepicker]="picker2" placeholder="Kraj Zauzeca"
+                        [ngModelOptions]="{standalone: true}" required disabled>
+                    <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+                    <mat-datepicker #picker2 disabled="false"></mat-datepicker>
+                </mat-form-field>
+
+                <!-- Vreme Povratka -->
+                <p style="color: rgb(153, 152, 152);">Vreme Kraja Zauzeca:</p>
+                <div class="ngx-timepicker-field-example">
+                    <ngx-timepicker-field [(ngModel)]="timeTo" [ngModelOptions]="{standalone: true}"
+                        [defaultTime]="'12:00'" [format]="24" [controlOnly]="true"></ngx-timepicker-field>
+                </div>
+
+            </mat-card-content>
+            <button mat-raised-button color="primary" (click)="onTerminZauzeca()"
+                [disabled]="!formControl.valid">Unesi Zauzece</button>
+        </form>
+    </mat-card>
+</div>
