--- a/ServisiFront/src/app/components/userComponent/user/novi-oglas/novi-oglas.component.html
+++ b/ServisiFront/src/app/components/userComponent/user/novi-oglas/novi-oglas.component.html
@@ -1,3 +1,4 @@
+
 <mat-toolbar color="primary" class="app-header">
     <div><a href="/" class="navlogo">Rent-A-Car</a></div>
     <span class="nav-tool-items">
@@ -57,8 +58,10 @@
 
 
         </mat-card-content>
-  
-        <button mat-stroked-button color="primary" class="btn-block" type="submit">Potvrdi</button>
+        <a routerLink="/oglas/create"><button  mat-stroked-button class="buttonKorakUnazad" >Korak unazad</button></a>
+        <br>
+        <br>
+        <button mat-stroked-button  class="buttonPotvrdi" type="submit">Potvrdi</button>
   
       </form>
     </mat-card>
