--- a/ServisiFront/src/app/components/login/login.component.html
+++ b/ServisiFront/src/app/components/login/login.component.html
@@ -6,7 +6,7 @@
   </mat-toolbar>
   
   <div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center" > <!-- style="margin-top: -30px;" -->
-    <mat-card class="box">
+    <mat-card class="box pozicija">
       <mat-card-header>
         <mat-card-title>Prijavi se</mat-card-title>
       </mat-card-header>
