--- a/ServisiFront/src/app/components/userComponent/user/pravi-oglas/pravi-oglas.component.css
+++ b/ServisiFront/src/app/components/userComponent/user/pravi-oglas/pravi-oglas.component.css
@@ -1,5 +1,5 @@
 .buttonVozilo {
-    background-color: #4CAF50; /* Green */
+    background-color: rgb(0, 162, 255); /* Green */
     border: none;
     color: white;
     padding: 13px 22px;
