--- a/AgentAppFront/src/app/components/userComponent/user/user.component.css
+++ b/AgentAppFront/src/app/components/userComponent/user/user.component.css
@@ -41,12 +41,12 @@ mat-grid-tile h1 {
 }
 .content-left {
     float: left;
-    width: 80%;
+    width: 75%;
 }
 .content-right {
     margin: 1.5rem;
     float: right;
-    width: 20%;
+    width: 25%;
     background: white;
 }
 .search-container{
@@ -74,3 +74,9 @@ mat-grid-tile h1 {
 .mat-input-element{
     color: black;
 }
+
+md-grid-list.header {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
