--- a/ServisiFront/src/app/components/login/login.component.css
+++ b/ServisiFront/src/app/components/login/login.component.css
@@ -1,4 +1,32 @@
-.pozicija {
-    width: 70%;
-    
-  }
+.example-icon {
+  padding: 0 14px;
+}    
+.example-spacer {
+  flex: 1 1 auto;
+}    
+.example-card {
+  background-color: rgb(148, 199, 231);
+  max-width: 500px;
+  width: 80%;
+  margin: 40px;
+ 
+}    
+.example-header-image {
+  background-image: image("./assets/logo.png");
+  background-size: cover;
+}    
+.main-div {
+  height: 50vh;
+  padding-top: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.example-full-width {
+  width: 100%;
+}
+
+.btn-block{
+  background-color: mediumblue;
+}
