--- a/ServisiFront/src/app/components/login/login.component.html
+++ b/ServisiFront/src/app/components/login/login.component.html
@@ -4,25 +4,43 @@
       <a mat-button mat-raised-button routerLink="/register" routerLinkActive="active">Napravi nalog</a>
     </span>
   </mat-toolbar>
-  
-  <div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center" > <!-- style="margin-top: -30px;" -->
-    <mat-card class="box pozicija">
-      <mat-card-header>
-        <mat-card-title>Prijavi se</mat-card-title>
-      </mat-card-header>
-      <form class="form" (submit)="onSubmit()">
-        <mat-card-content>
-          <mat-form-field class="full-width">
-            <input matInput placeholder="Email" [(ngModel)]="username" [ngModelOptions]="{standalone: true}" required>
-          </mat-form-field>
-          <mat-form-field class="full-width">
-            <input matInput placeholder="Lozinka" type="password" [(ngModel)]="password"
+
+
+<div class="main-div">
+  <mat-card class="example-card">
+    <mat-card-header>
+      <mat-card-title>Login</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <form class="example-form" (submit)="onSubmit()">
+        <table class="example-full-width" cellspacing="0">
+          <tr>
+            <td>
+              <mat-form-field class="example-full-width">
+                <input  matInput placeholder="Email" [(ngModel)]="username" [ngModelOptions]="{standalone: true}" required>
+              </mat-form-field>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <mat-form-field class="example-full-width">
+                <input matInput placeholder="Lozinka" type="password" [(ngModel)]="password"
               [ngModelOptions]="{standalone: true}" required>
-          </mat-form-field>
-        </mat-card-content>
+              </mat-form-field>
+            </td>
+          </tr>
+        </table>
+
         <span *ngIf="dataInvalid" style="font-size: 15px; position: relative; top: -15px; color: red;">Pogresan email ili
           lozinka</span>
-        <button mat-stroked-button color="primary" class="btn-block" type="submit">Potvrdi</button>
+        <button mat-stroked-button class="btn-block" type="submit">Potvrdi</button>
+
+
       </form>
-    </mat-card>
-  </div>
+    
+    </mat-card-content>
+ 
+  
+
+  </mat-card>
+</div>
