Registracija front i back

--- a/ServisiFront/src/app/components/login/login.component.html
+++ b/ServisiFront/src/app/components/login/login.component.html
@@ -17,7 +17,7 @@
           <tr>
             <td>
               <mat-form-field class="example-full-width">
-                <input  matInput placeholder="Email" [(ngModel)]="username" [ngModelOptions]="{standalone: true}" required>
+                <input  matInput placeholder="Username" type="text" [(ngModel)]="username" [ngModelOptions]="{standalone: true}" required>
               </mat-form-field>
             </td>
           </tr>
