--- a/ServisiFront/src/app/components/registration-page/registration-page.component.html
+++ b/ServisiFront/src/app/components/registration-page/registration-page.component.html
@@ -1,1 +1,96 @@
-<p>registration-page works!</p>
+<mat-toolbar color="primary" class="app-header">
+    <div><a href="/" class="navlogo">Rent-A-Car</a></div>
+    <span class="nav-tool-items">
+      <a mat-button mat-raised-button routerLink="/register" routerLinkActive="active">Napravi nalog</a>
+    </span>
+  </mat-toolbar>
+
+
+<div class="main-div">
+  <mat-card class="example-card">
+    <mat-card-header>
+      <mat-card-title>Registruj se</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <form class="example-form" (submit)="onSubmit()">
+        <table class="example-full-width" cellspacing="0">
+          <tr>
+            <td>
+              <mat-form-field class="example-full-width">
+                <input  matInput placeholder="Ime" [(ngModel)]="user.ime" type="text" [ngModelOptions]="{standalone: true}" required>
+              </mat-form-field>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <mat-form-field class="example-full-width">
+                <input  matInput placeholder="Prezime" [(ngModel)]="user.prezime" type="text" [ngModelOptions]="{standalone: true}" required>
+              </mat-form-field>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <mat-form-field class="example-full-width">
+                <input  matInput placeholder="Adresa" [(ngModel)]="user.adresa" type="text" [ngModelOptions]="{standalone: true}" required>
+              </mat-form-field>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <mat-form-field class="example-full-width">
+                <input  matInput placeholder="Mesto" [(ngModel)]="user.mesto" type="text" [ngModelOptions]="{standalone: true}" required>
+              </mat-form-field>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <mat-form-field class="example-full-width">
+                <input  matInput placeholder="Telefon" [(ngModel)]="user.telefon" type="number" [ngModelOptions]="{standalone: true}" required>
+              </mat-form-field>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <mat-form-field class="example-full-width">
+                <input  matInput placeholder="Username" [(ngModel)]="user.username" type="text" [ngModelOptions]="{standalone: true}" required>
+              </mat-form-field>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <mat-form-field class="example-full-width">
+                <input  matInput placeholder="Email" [(ngModel)]="user.email" type="email" [ngModelOptions]="{standalone: true}" required>
+              </mat-form-field>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <mat-form-field class="example-full-width">
+                <input matInput placeholder="Lozinka" type="password" [(ngModel)]="user.password"
+              [ngModelOptions]="{standalone: true}" required>
+              </mat-form-field>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <mat-form-field class="example-full-width">
+                <input matInput placeholder="Potvrda lozinke" type="password" [(ngModel)]="user.potvrdalozinke"
+              [ngModelOptions]="{standalone: true}" required>
+              </mat-form-field>
+            </td>
+          </tr>
+        </table>
+
+        <span *ngIf="dataInvalid" style="font-size: 15px; position: relative; top: -15px; color: red;">Pogresan email ili
+          lozinka</span>
+        <button mat-stroked-button class="btn-block" type="submit">Potvrdi</button>
+
+
+      </form>
+    
+    </mat-card-content>
+ 
+  
+
+  </mat-card>
+</div>
