Rad na admin frontu

--- a/ServisiFront/src/app/components/userComponent/administrator/administrator.component.html
+++ b/ServisiFront/src/app/components/userComponent/administrator/administrator.component.html
@@ -2,17 +2,20 @@
     <div><a href="/" class="navlogo">Rent-A-Car Administrator</a></div>
     <span class="nav-tool-items">
 <span>
-      <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" routerLink="/markaVozila">Dodaj Marku Vozila</a>
+     
+
+      <button class="dugmeKreiraj"  mat-button [matMenuTriggerFor]="menu">Kreiraj</button>
+      <mat-menu #menu="matMenu">
+        <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" routerLink="/markaVozila">Dodaj Marku Vozila</a>
       
-      <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" routerLink="/klasaVozila">Dodaj Klasu Vozila</a>
-      
-      <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" routerLink="/modelVozila">Dodaj Model Vozila</a>
-
-      <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" routerLink="/gorivoVozila">Dodaj Tip Goriva</a>
-
-      <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" routerLink="/menjacVozila">Dodaj Vrstu Menjaca</a>
-
+        <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" routerLink="/klasaVozila">Dodaj Klasu Vozila</a>
+        
+        <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" routerLink="/modelVozila">Dodaj Model Vozila</a>
   
+        <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" routerLink="/gorivoVozila">Dodaj Tip Goriva</a>
+  
+        <a mat-button mat-raised-button  routerLinkActive="active" class="dugme" routerLink="/menjacVozila">Dodaj Vrstu Menjaca</a>
+      </mat-menu>
 
     </span>
 
@@ -23,9 +26,9 @@
     </span>
   </mat-toolbar>  
 
+ 
 
-
-
+ 
 
 
 <div style="padding:20px;margin-top:30px;">
