--- a/ServisiFront/src/app/components/userComponent/user/novi-oglas/novi-oglas.component.html
+++ b/ServisiFront/src/app/components/userComponent/user/novi-oglas/novi-oglas.component.html
@@ -9,7 +9,7 @@
   <div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
     <mat-card >
       <mat-card-header>
-        <mat-card-title>Novo vozilo</mat-card-title>
+        <mat-card-title>Kreiraj Novo vozilo</mat-card-title>
       </mat-card-header>
   
       <form class="form" (submit)="onSubmit()">
